Fix input box horizontal overflow bug on small screens.

--- a/css/base.css
+++ b/css/base.css
@@ -197,7 +197,7 @@ button::-moz-focus-inner {
     font-size: 12px;
   }
 
-  main, footer {
+  main, footer, #addTodoTextInput {
     width: 80%;
   }
 }
